--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="My name is Hashir Shoaib. I’m a graduate of 2020 from National University of Sciences and Technology at Islamabad with a degree in Computer Engineering. I'm most passionate about giving back to the community, and my goal is to pursue this passion within the field of software engineering. In my free time I like working on open source projects."
+      content="Ciao a tutti mi chiamo Michael Doria. Fin da piccolo ho coltivato la passione verso la tecnologia e l'informatica. Ho studiato informatica all'ITIS E.Fermi di Lucca dove mi sono diplomato nel 2018, anno in cui ho iniziato a studiare informatica presso l'università di Pisa dove sto ancora attualmente studiando e dove vorrei proseguire con una laurea magistrale in intelligenza artificiale. Dal 2019 al 2021 ho lavorato presso Hastega come sviluppatore di applicazioni mobile iOS."
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hashir Shoaib</title>
+    <title>Michael Doria</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
